Build artifacts for vLB use case
- Change the POM file of the distribution plugin
- Modify istall/init scripts to download artifacts
- Delete mvn compile process from istall/init scripts

Issue-ID: INT-1166
Signed-off-by: Marco Platania <platania@research.att.com>
Change-Id: I02feb19b6531ea5ca583343f7f724bc496d1d1b7